@@ -1,6 +1,7 @@
 ChangeLog
 ==========
 
+- merge changes e.g. samtools for duplicate marking and other small changes.
 - hostname removal after biobambam2 bammerge to samtools merge in  merged_align.json in p4 
 
 release 3.20
